--- a/package.json
+++ b/package.json
@@ -1,20 +1,32 @@
 {
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.15.4",
     "@react-native-community/masked-view": "~0.1.10",
     "@react-navigation/bottom-tabs": "~5.11.7",
     "@react-navigation/native": "~5.9.2",
+    "@react-navigation/stack": "^5.14.4",
+    "axios": "^0.21.1",
     "expo": "~40.0.0",
+    "expo-linking": "^2.0.1",
+    "expo-splash-screen": "^0.10.2",
+    "expo-status-bar": "^1.0.4",
+    "jsonwebtoken": "^8.5.1",
+    "jwt-decode": "^3.1.2",
+    "native-base": "^2.15.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
+    "react-native-dotenv": "^2.5.5",
     "react-native-gesture-handler": "~1.8.0",
     "react-native-reanimated": "~1.13.2",
     "react-native-safe-area-context": "~3.1.9",
     "react-native-screens": "~2.15.2",
-    "react-native-web": "~0.13.12"
+    "react-native-web": "~0.13.12",
+    "swr": "^0.5.5"
   },
   "devDependencies": {
-    "@babel/core": "~7.9.0"
+    "@babel/core": "~7.13.0",
+    "jest-expo": "~41.0.0"
   },
   "scripts": {
     "start": "expo start",
